...
    "alert": "Alert",
    "cancel": "Cancel",
    "delete": "Delete",
    "add": "Add",
    "reset": "Clear",
    "reset_all": "Clear All",
    "search": "Search",
    "upload": "Upload",
    "edit": "Edit",
    "search_hint": "Search by course title, instructor, etc.",
    "review_hint": "Please describe your evaluation on the lecture,\nlike grade or load.",
    "no_result": "No result.",
    "select_all": "Select All",
    "unselect_all": "Unselect All",
    "no_info": "No information",
    "all_selected": "All Selected",
...
