...
                  child: Padding(
                    padding: const EdgeInsets.symmetric(
                      horizontal: 8.0,
                      vertical: 4.0,
                    ),
                    child: TextField(
                      key: const Key('review_write_field'),
                      controller: _contentTextController,
                      maxLines: null,
                      style: bodyRegular,
                      onChanged: (value) {
                        setState(() {});
                      },
...
            _buildScore(_ScoreCategory.grade),
            _buildScore(_ScoreCategory.load),
            _buildScore(_ScoreCategory.speech),
            Align(
              alignment: Alignment.bottomRight,
              child: IconTextButton(
                key: const Key('review_write_submit'),
                padding: EdgeInsets.zero,
                color: _canUpload() ? OTLColor.pinksMain : OTLColor.grayA,
                text: (widget.existingReview == null)
                    ? "common.upload".tr()
                    : "common.edit".tr(),
                onTap: _canUpload() ? _uploadReview : null,
...
